fixed bug menu not showing in desktop size

--- a/src/pages/components/Navigation/NavTest.css
+++ b/src/pages/components/Navigation/NavTest.css
@@ -24,6 +24,7 @@
   padding: 0;
   margin: 0;
   list-style: none;
+  display:block;
 }
 
 .navigation ul.nav-menu li {
@@ -74,6 +75,10 @@
   display: none;
 }
 
+.active {
+  display: block;
+}
+
 @media (max-width:900px) {
 
   .navigation {
@@ -104,7 +109,10 @@
     width: 100%;
     padding: 1rem;
   }
-
+  .navigation ul.nav-menu.active {
+    display: block;
+  }
+  
   .underline-effect::after {
     content: none;
   }
